# omeka2dsp

./: .gitignore  .nojekyll  AGENTS.md  CHANGELOG.html  CHANGELOG.md  CODE_OF_CONDUCT.html  CONTRIBUTING.html  LICENSE-AGPL.html  LICENSE-CCBY.html  LICENSE.html  README.md  SECURITY.html  _brand.yml  _quarto.yml  api.qmd  architecture.qmd  cliff.toml  configuration.qmd  development.qmd  documentation.qmd  example.env  index.qmd  installation.qmd  package.json  pnpm-lock.yaml  project.json  pyproject.toml  report.html  report.qmd  robots.txt  search.json  site.webmanifest  sitemap.xml  styles.css  troubleshooting.qmd  usage.qmd  workflows.qmd
.devcontainer/: install.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: quarto-publish.yml  test.yml
data/: data_model_dasch.json  example_api_get_MEDIA.json  example_api_get_OBJEKT.json  example_payload_MEDIA.json  example_payload_OBJEKT.json
docs/: README.md  index.html  index.qmd
docs/api/: README.md  index.html  index.qmd
docs/architecture/: README.md  index.html  index.qmd
docs/datamodel/: index.html  index.qmd
docs/guides/: configuration.html  configuration.md  configuration.qmd  development.html  development.md  development.qmd  installation.html  installation.md  installation.qmd  troubleshooting.html  troubleshooting.md  troubleshooting.qmd  usage.html  usage.qmd
docs/workflows/: index.html  index.qmd
project-management/: about.html  about.qmd  communication.html  communication.qmd  people.html  people.qmd  tools.qmd
scripts/: data_2_dasch.py  process_data_from_omeka.py  remove_subject_values.py
site_libs/bootstrap/: bootstrap-6527f0f6f1a49fae8767c07d481ee51a.min.css
src/omeka2dsp/: __init__.py
test/: conftest.py  test_data_2_dasch.py  test_privacy_flag.py
