[project]
name = "omeka2dsp"
version = "1.0.0"
description = "Pipeline and data model for migrating Stadt.Geschichte.Basel data from Omeka S to DaSCH Service Platform"
readme = "README.md"
authors = [
    { name = "Stadt Geschichte Basel", email = "info@stadtgeschichtebasel.ch" }
]
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
]

# ponytail: plain script repo, nothing imports src/ — no build backend needed
[tool.uv]
package = false
